fixed whitespace around nav bar

--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 .index-tile-wrapper {
     display: flex;
     flex-flow: row wrap;
@@ -10,6 +16,7 @@
 .index-background {
     width: 300px;
     height: 200px;
+    padding: 15px;
 }
 
 .index-link {
